--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
+[submodule "git-aware-prompt"]
+	path = git-aware-prompt
+	url = git://github.com/jimeh/git-aware-prompt.git
