Added Hyper configuration file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,8 @@
 
     ~/bin: bin
 
+    ~/.hyper.js: hyper/hyper.js
+
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
