Created file for common alias and staff shared between bash and zsh shell

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,6 +20,10 @@
 
     ~/.zshrc: zshrc.zsh
 
+    ~/.myscript/common.sh: 
+        create: true
+        path: common.sh
+
     #alternatives to '$(brew --prefix)/opt/fzf/install --all'
     ~/.fzf.bash: fzfconfig/fzf.bash
     ~/.fzf.zsh: fzfconfig/fzf.zsh
