--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = https://github.com/tpope/vim-fugitive
 [submodule "git-aware-prompt"]
 	path = git-aware-prompt
-	url = git://github.com/jimeh/git-aware-prompt.git
+	url = https://github.com/jimeh/git-aware-prompt.git
 [submodule "fzf/fzf"]
 	path = fzf/fzf
 	url = https://github.com/junegunn/fzf
