--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "fzf/fzf"]
 	path = fzf/fzf
 	url = https://github.com/junegunn/fzf
+[submodule "git-aware-prompt"]
+	path = git-aware-prompt
+	url = https://github.com/jimeh/git-aware-prompt.git
